--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
       <link href="./index.css" type="text/css" rel="stylesheet">
  </head>
 <body>
-  <h1>John Wilson</h1>
-  <p>Welcome to my website!</p>
+  <div class='banner'><h1>Jump Ship</h1>
+  <p class='quote'>International diversification for non-billionaires</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ </div>
 </body>
  
 </html>
